# scale-codec-cpp

./: CMakeLists.txt
cmake/: 3rdpartyUtils.cmake
cmake/Conan/: Boost.cmake  Boost.random.cmake  GTest.cmake  Init.cmake  Microsoft.GSL.cmake
cmake/Hunter/: Add3rdparties.cmake  Boost.cmake  Boost.random.cmake  GTest.cmake  Init.cmake  Microsoft.GSL.cmake
include/scale/: scale_decoder_stream.hpp  scale_encoder_stream.hpp
include/scale/outcome/: outcome.hpp
test/: CMakeLists.txt
test/installation/: CMakeLists.txt
